# dynamodb-event-store-rs

./: .gitignore  Cargo.toml  README.md
src/: aggregates.rs  events.rs  lib.rs
tests/: aggregates_test.rs  dynamodb_local.rs  event_test.rs  events_test.rs
