[package]
name = "event-store-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
aws-types = "0.54.1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
anyhow = "1.0.68"

[dev-dependencies]
testcontainers = "0.14.0"
pretty_env_logger = "0.4"
tokio = { version = "1", features = [ "macros" ] }